--- a/NetEvent/Client/Pages/Profile/Manage.razor
+++ b/NetEvent/Client/Pages/Profile/Manage.razor
@@ -19,7 +19,7 @@
 @code {
     string Message = "";
 
-    private async Task LogUsername()
+    private void LogUsername()
     {
         //var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
         //var user = authState.User;
