Add Some Layout

--- a/NetEvent/Client/Shared/MainLayout.razor
+++ b/NetEvent/Client/Shared/MainLayout.razor
@@ -1,17 +1,36 @@
 ﻿@inherits LayoutComponentBase
+@inject IJSRuntime JSRuntime
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<div class="page d-flex flex-column vh-100">
+	@*    <div class="sidebar">
+		<NavMenu />
+		</div>*@
 
-    <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-        </div>
+	<header>
+		<NavigationBar />
+	</header>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+	<!-- Begin page content -->
+	<main class="flex-shrink-0 mt-navbar">
+		<div class="container">
+			@Body
+		</div>
+	</main>
+
+	<footer class="footer mt-auto py-3 bg-light">
+		<div class="container">
+			<span class="text-muted">Place sticky footer content here.</span>
+		</div>
+	</footer>
+
 </div>
+
+@code {
+	protected override async Task OnAfterRenderAsync(bool firstRender)
+	{
+		if (firstRender)
+		{
+			await JSRuntime.InvokeAsync<IJSObjectReference>("import", new[] { "/js/bootstrap.js" });
+		}
+	}
+}
