--- a/NetEvent/Client/wwwroot/css/app.css
+++ b/NetEvent/Client/wwwroot/css/app.css
@@ -62,3 +62,7 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.mt-navbar{
+    margin-top: 56px;
+}
