Register with first and last name

--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -37,10 +37,10 @@
 					</Authorized>
 					<NotAuthorized>
 						<li class="nav-item ms-auto">
-							<a class="nav-link disabled" href="authentication/register" tabindex="-1" aria-disabled="true">Register</a>
+							<a class="nav-link" href="authentication/register" tabindex="-1" aria-disabled="true">Register</a>
 						</li>
 						<li class="nav-item ms-auto">
-							<a class="nav-link disabled" href="authentication/login" tabindex="-1" aria-disabled="true">Log in</a>
+							<a class="nav-link" href="authentication/login" tabindex="-1" aria-disabled="true">Log in</a>
 						</li>
 					</NotAuthorized>
 				</AuthorizeView>
