--- a/NetEvent/Server/Views/Authorization/Authorize.cshtml
+++ b/NetEvent/Server/Views/Authorization/Authorize.cshtml
@@ -17,3 +17,7 @@
         <input class="btn btn-lg btn-danger" name="submit.Deny" type="submit" value="No" />
     </form>
 </div>
+
+@section scripts{
+    
+}
