--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -26,12 +26,20 @@
 					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 				</li>
 
+				<AuthorizeView Roles="Admin">
+					<Authorized>
+						<li class="nav-item ms-auto">
+							<a class="nav-link" href="administration" tabindex="-1" aria-disabled="true">Admin</a>
+						</li>
+					</Authorized>
+				</AuthorizeView>
+
 				<AuthorizeView>
 					<Authorized>
 						<li class="nav-item ms-auto">
 							<a class="nav-link" href="profile/manage" tabindex="-1" aria-disabled="true">Hello, @context.User.Identity?.Name!</a>
 						</li>
-						<li class="nav-item ms-auto">
+						<li class="nav-item auto">
 							<button class="nav-link btn btn-link" @onclick="BeginSignOut">Log out</button>
 						</li>
 					</Authorized>
@@ -39,7 +47,7 @@
 						<li class="nav-item ms-auto">
 							<a class="nav-link" href="authentication/register" tabindex="-1" aria-disabled="true">Register</a>
 						</li>
-						<li class="nav-item ms-auto">
+						<li class="nav-item ">
 							<a class="nav-link" href="authentication/login" tabindex="-1" aria-disabled="true">Log in</a>
 						</li>
 					</NotAuthorized>
