--- a/NetEvent/Server/Views/Authorization/Logout.cshtml
+++ b/NetEvent/Server/Views/Authorization/Logout.cshtml
@@ -15,3 +15,7 @@
         <input class="btn btn-lg btn-success" name="Confirm" type="submit" value="Yes" />
     </form>
 </div>
+
+@section scripts{
+    
+}
