--- a/NetEvent/Client/Pages/Administration/Index.razor
+++ b/NetEvent/Client/Pages/Administration/Index.razor
@@ -8,9 +8,9 @@
 
 <ul>
 
-	@foreach (var user in Users)
+	@*@foreach (var user in Users)
 	{
 		<li>@user.Id - @user.UserName</li>
-	}
+	}*@
 
 </ul>
