--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -4,65 +4,21 @@
 @inject NavigationManager Navigation
 @inject SignOutSessionStateManager SignOutManager
 
-
-
-
-<!-- Fixed navbar -->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Fixed navbar</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-			<ul class="navbar-nav container-fluid mb-2 mb-md-0 d-flex">
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-				</li>
-
-				<AuthorizeView Roles="Admin">
-					<Authorized>
-						<li class="nav-item ms-auto">
-							<a class="nav-link" href="administration" tabindex="-1" aria-disabled="true">Admin</a>
-						</li>
-					</Authorized>
-				</AuthorizeView>
-
-				<AuthorizeView>
-					<Authorized>
-						<li class="nav-item ms-auto">
-							<a class="nav-link" href="profile/manage" tabindex="-1" aria-disabled="true">Hello, @context.User.Identity?.Name!</a>
-						</li>
-						<li class="nav-item auto">
-							<button class="nav-link btn btn-link" @onclick="BeginSignOut">Log out</button>
-						</li>
-					</Authorized>
-					<NotAuthorized>
-						<li class="nav-item ms-auto">
-							<a class="nav-link" href="authentication/register" tabindex="-1" aria-disabled="true">Register</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="authentication/login" tabindex="-1" aria-disabled="true">Log in</a>
-						</li>
-					</NotAuthorized>
-				</AuthorizeView>
-
-			</ul>
-
-		</div>
-	</div>
-</nav>
+<AuthorizeView>
+    <Authorized>
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Href="profile/manage" Match="NavLinkMatch.Prefix">Hello, @context.User.Identity?.Name!</MudButton>
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Secondary" OnClick="BeginSignOut">Log out</MudButton>
+    </Authorized>
+    <NotAuthorized>
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Href="authentication/register" Match="NavLinkMatch.Prefix">Register</MudButton>
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Secondary" Href="authentication/login" Match="NavLinkMatch.Prefix">Log in</MudButton>
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
-	private async Task BeginSignOut(MouseEventArgs args)
-	{
-		await SignOutManager.SetSignOutState();
-		Navigation.NavigateTo("authentication/logout");
-	}
+    private async Task BeginSignOut(MouseEventArgs args)
+    {
+        await SignOutManager.SetSignOutState();
+        Navigation.NavigateTo("authentication/logout");
+    }
 }
