--- a/NetEvent/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/NetEvent/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using NetEvent.Server.Models
+@using NetEvent.Shared.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
