Add ThemeManager and Routes

--- a/NetEvent/Client/Pages/Administration/AdminMenu.razor
+++ b/NetEvent/Client/Pages/Administration/AdminMenu.razor
@@ -1,8 +1,5 @@
-﻿
-<MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration" Match="NavLinkMatch.Prefix">Dashboard</MudButton>
+﻿<MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration" Match="NavLinkMatch.Prefix">Dashboard</MudButton>
 <MudDivider  />
 <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration/users" Match="NavLinkMatch.Prefix">Benutzer</MudButton>
+<MudDivider  />
 
-@code {
-
-}
