--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -1,8 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using NetEvent.Client.Services
 
 @inject NavigationManager Navigation
-@inject SignOutSessionStateManager SignOutManager
+@inject CustomStateProvider SignOutManager
 
 <AuthorizeView>
     <Authorized>
@@ -10,15 +11,15 @@
         <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Secondary" OnClick="BeginSignOut">Log out</MudButton>
     </Authorized>
     <NotAuthorized>
-        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Href="authentication/register" Match="NavLinkMatch.Prefix">Register</MudButton>
-        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Secondary" Href="authentication/login" Match="NavLinkMatch.Prefix">Log in</MudButton>
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Href="register" Match="NavLinkMatch.Prefix">Register</MudButton>
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Secondary" Href="login" Match="NavLinkMatch.Prefix">Log in</MudButton>
     </NotAuthorized>
 </AuthorizeView>
 
 @code {
     private async Task BeginSignOut(MouseEventArgs args)
     {
-        await SignOutManager.SetSignOutState();
-        Navigation.NavigateTo("authentication/logout");
+        await SignOutManager.Logout();
+        Navigation.NavigateTo("/");
     }
 }
