--- a/NetEvent/Client/Pages/Administration/Users.razor
+++ b/NetEvent/Client/Pages/Administration/Users.razor
@@ -8,7 +8,7 @@
 
 <MudTabs Elevation="1" Rounded="true">
     <MudTabPanel Text="User">
-        <MudDataGrid T="User"
+        <MudDataGrid T="UserDto"
                      MultiSelection="false"
                      Items="@AllUsers"
                      Sortable="true"
@@ -27,12 +27,12 @@
             </ToolBarContent>
             <Columns>
                 @*<SelectColumn T="ApplicationUser" />*@
-                <Column T="User" Field="UserName" Title="Username" />
-                <Column T="User" Field="FirstName" />
-                <Column T="User" Field="LastName" />
-                <Column T="User" Field="Email" />
+                <Column T="UserDto" Field="UserName" Title="Username" />
+                <Column T="UserDto" Field="FirstName" />
+                <Column T="UserDto" Field="LastName" />
+                <Column T="UserDto" Field="Email" />
                 @*<Column T="User" Field="PhoneNumber" Title="Molar mass" />*@
-                <Column T="User" Field="EmailConfirmed">
+                <Column T="UserDto" Field="EmailConfirmed">
                     <CellTemplate>
                         <MudCheckBox Checked="@context.Item.EmailConfirmed" ReadOnly="true" />
                     </CellTemplate>
@@ -40,14 +40,14 @@
                         <MudCheckBox @bind-Checked="@context.Item.EmailConfirmed" Label="Email confirmed" />
                     </EditTemplate>
                 </Column>
-                <Column T="User" CellClass="d-flex justify-end">
+                <Column T="UserDto" CellClass="d-flex justify-end">
                     <CellTemplate>
                         <MudIconButton Size="@Size.Small" Icon="@Icons.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
                     </CellTemplate>
                 </Column>
             </Columns>
             <PagerContent>
-                <MudDataGridPager T="User" />
+                <MudDataGridPager T="UserDto" />
             </PagerContent>
         </MudDataGrid>
     </MudTabPanel>
