Add basic localisation

--- a/NetEvent/Client/App.razor
+++ b/NetEvent/Client/App.razor
@@ -1,3 +1,5 @@
+@inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
+
 <CascadingAuthenticationState>
 	<Router AppAssembly="@typeof(Program).Assembly">
 		<Found Context="routeData">
@@ -9,7 +11,7 @@
 					}
 					else
 					{
-						<p role="alert">You are not authorized to access this resource.</p>
+						<p role="alert">@Localize["App.NotAuthorized"]</p>
 					}
 				</NotAuthorized>
 			</AuthorizeRouteView>
@@ -18,7 +20,7 @@
 		<NotFound>
             <PageTitle>Not found</PageTitle>
 			<LayoutView Layout="@typeof(MainLayout)">
-				<p role="alert">Sorry, there's nothing at this address.</p>
+				<p role="alert">@Localize["App.NothingHere"]</p>
 			</LayoutView>
 		</NotFound>
 	</Router>
