--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -3,7 +3,7 @@
 @using NetEvent.Client.Services
 
 @inject NavigationManager Navigation
-@inject CustomStateProvider SignOutManager
+@inject NetEventAuthenticationStateProvider SignOutManager
 
 <AuthorizeView>
     <Authorized>
