change users title

--- a/NetEvent/Client/Pages/Administration/Users.razor
+++ b/NetEvent/Client/Pages/Administration/Users.razor
@@ -22,7 +22,7 @@
                      QuickFilter="@_usersQuickFilter"
                      Hideable="true">
             <ToolBarContent>
-                <MudText Typo="Typo.h6">@Localize["Administration.Users.Periodic"]</MudText>
+                <MudText Typo="Typo.h6">@Localize["Administration.Users.Title"]</MudText>
                 <MudSpacer />
                 <MudTextField @bind-Value="_UsersSearchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
                               AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
