Undo remove of used variable

--- a/NetEvent/Client/App.razor
+++ b/NetEvent/Client/App.razor
@@ -1,3 +1,5 @@
+@inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
+
 <CascadingAuthenticationState>
 	<Router AppAssembly="@typeof(Program).Assembly">
 		<Found Context="routeData">
