--- a/NetEvent/Client/Pages/Login.razor
+++ b/NetEvent/Client/Pages/Login.razor
@@ -16,3 +16,10 @@
         </MudCardActions>
     </MudCard>    
 </EditForm>
+<MudButton OnClick="LoginWithSteam"
+           Target="_blank"
+           Variant="Variant.Filled"
+           EndIcon="@Icons.Custom.Brands.Steam"
+           Color="Color.Primary">
+    Login with Steam
+</MudButton>
