--- a/NetEvent/Client/Pages/Administration/Users.razor
+++ b/NetEvent/Client/Pages/Administration/Users.razor
@@ -68,46 +68,63 @@
         </MudDataGrid>
     </MudTabPanel>
     <MudTabPanel Text="Roles">
-        <MudDataGrid T="RoleDto"
-                     MultiSelection="false"
-                     Items="@AllRoles"
-                     Sortable="true"
-                     Filterable="true"
-                     ReadOnly="false"
-                     EditMode="DataGridEditMode.Form"
-                     EditTrigger="DataGridEditTrigger.Manual"
-                     CommittedItemChanges="@CommittedRoleChangesAsync"
-                     QuickFilter="@_roleQuickFilter"
-                     Hideable="true">
-            <ToolBarContent>
-                <MudText Typo="Typo.h6">Roles</MudText>
-                <MudSpacer />
-                <MudTextField @bind-Value="_RoleSearchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
-                              AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-            </ToolBarContent>
-            <Columns>
-                <Column T="RoleDto" Field="Id" Title="Id" />
-                <Column T="RoleDto" Field="Name" />
-                <Column T="RoleDto" Title="Claims">
-                    <CellTemplate>
-                        @if (@context.Item.Claims != null)
-                        {
-                            @foreach (var claim in @context.Item.Claims)
+            <MudDataGrid T="RoleDto"
+                         MultiSelection="false"
+                         Items="@AllRoles"
+                         Sortable="true"
+                         Filterable="true"
+                         ReadOnly="false"
+                         @bind-SelectedItem="@SelectedRole"
+                         EditMode="DataGridEditMode.Form"
+                         EditTrigger="DataGridEditTrigger.Manual"
+                         CommittedItemChanges="@CommittedRoleChangesAsync"
+                         QuickFilter="@_roleQuickFilter"
+                         Hideable="true">
+                <ToolBarContent>
+                    <MudText Typo="Typo.h6">Roles</MudText>
+                    <MudSpacer />
+                    <MudTextField @bind-Value="_RoleSearchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
+                                  AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+                </ToolBarContent>
+                <Columns>
+                    <Column T="RoleDto" Field="Id" Title="Id" />
+                    <Column T="RoleDto" Field="Name" />
+                    <Column T="RoleDto" Title="Claims">
+                        <CellTemplate>
+                            @if (@context.Item.Claims != null)
                             {
-                                <div>@claim.Type</div>
+                                @foreach (var claim in @context.Item.Claims)
+                                {
+                                    <div>@claim</div>
+                                }
                             }
-                        }
-                    </CellTemplate>
-                </Column>
-                <Column T="RoleDto" CellClass="d-flex justify-end">
-                    <CellTemplate>
-                        <MudIconButton Size="@Size.Small" Icon="@Icons.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
-                    </CellTemplate>
-                </Column>
-            </Columns>
-            <PagerContent>
-                <MudDataGridPager T="RoleDto" />
-            </PagerContent>
-        </MudDataGrid>
+                        </CellTemplate>
+                        <EditTemplate>
+                            <MudSelect T="string"
+                                       MultiSelection="true"
+                                       SelectAll="true"
+                                       @bind-SelectedValues="context.Item.Claims"
+                                       Margin="@Margin.Dense"
+                                       SelectAllText="Select all permissions"
+                                       Label="Permissions"
+                                       MultiSelectionTextFunc="@(new Func<List<string>, string>(CreateSelectionLabel))"
+                                       HelperText="@value" @bind-Value="value">
+                                @foreach (var policy in NetEvent.Shared.Policies.AvailablePolicies)
+                                {
+                                    <MudSelectItem T="string" Value="@(policy)">@policy</MudSelectItem>
+                                }
+                            </MudSelect>
+                        </EditTemplate>
+                    </Column>
+                    <Column T="RoleDto" CellClass="d-flex justify-end">
+                        <CellTemplate>
+                            <MudIconButton Size="@Size.Small" Icon="@Icons.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
+                        </CellTemplate>
+                    </Column>
+                </Columns>
+                <PagerContent>
+                    <MudDataGridPager T="RoleDto" />
+                </PagerContent>
+            </MudDataGrid>
     </MudTabPanel>
 </MudTabs>
